--- a/KeywordManagement/KeywordManagement.csproj
+++ b/KeywordManagement/KeywordManagement.csproj
@@ -73,6 +73,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbMigrationsConfiguratio.cs" />
     <Compile Include="frmAuthor.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -170,6 +171,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
