--- a/KeywordManagement/KeywordManagement.csproj
+++ b/KeywordManagement/KeywordManagement.csproj
@@ -64,6 +64,9 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DocX">
+      <HintPath>..\packages\Docx\DocX.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.1.1\lib\net40\EntityFramework.dll</HintPath>
     </Reference>
@@ -136,6 +139,20 @@
     <Compile Include="Model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportTemplate\AddressReport.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AddressReport.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ReportTemplate\MyAddressReport.cs" />
+    <Compile Include="Report\ReportType.cs" />
+    <Compile Include="Report\ReportWriter.cs" />
+    <Compile Include="Report\SearchResultReport.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report\SearchResultReport.Designer.cs">
+      <DependentUpon>SearchResultReport.cs</DependentUpon>
+    </Compile>
     <Compile Include="SearchResult.cs" />
     <Compile Include="Utils.cs" />
     <EmbeddedResource Include="frmAuthor.resx">
@@ -166,6 +183,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Report\SearchResultReport.resx">
+      <DependentUpon>SearchResultReport.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
@@ -181,6 +201,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="ReportTemplate\AddressReport.tt">
+      <Generator>TextTemplatingFilePreprocessor</Generator>
+      <LastGenOutput>AddressReport.cs</LastGenOutput>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
@@ -201,6 +225,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
